# lap-timer

./: .cproject  .project  CMakeLists.txt  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  button.c  button.h  lapTimer.c  lapTimer.h  lapTimer_button.c  lapTimer_button.h  lapTimer_http.c  lapTimer_http.h  lapTimer_i2c.c  lapTimer_i2c.h  lapTimer_ir_sensor.c  lapTimer_ir_sensor.h  lapTimer_led.c  lapTimer_led.h  lapTimer_slaves.c  lapTimer_slaves.h  lapTimer_splits.c  lapTimer_splits.h  lapTimer_status.c  lapTimer_status.h  lapTimer_types.h  lapTimer_wifi.c  lapTimer_wifi.h  main.c  website.html
platform/inc/: vl53l0x_platform.h
platform/src/: vl53l0x_i2c_platform.c  vl53l0x_platform.c
